Initial checkin of sqlite module

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
       <module>qqq-backend-module-api</module>
       <module>qqq-backend-module-filesystem</module>
       <module>qqq-backend-module-rdbms</module>
+      <module>qqq-backend-module-sqlite</module>
       <module>qqq-backend-module-mongodb</module>
       <module>qqq-language-support-javascript</module>
       <module>qqq-openapi</module>
