--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -68,7 +68,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-frontend-material-dashboard</artifactId>
-         <version>0.20.0</version>
+         <version>0.24.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
@@ -119,12 +119,16 @@
                <descriptorRefs>
                   <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
-               <archive>
-                  <manifest>
-                     <mainClass>com.kingsrook.sampleapp.SampleCli</mainClass>
-                  </manifest>
-               </archive>
             </configuration>
+            <executions>
+               <execution>
+                  <id>make-assembly</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>single</goal>
+                  </goals>
+               </execution>
+            </executions>
          </plugin>
 
          <plugin>
