--- a/qqq-backend-module-filesystem/pom.xml
+++ b/qqq-backend-module-filesystem/pom.xml
@@ -51,9 +51,33 @@
          <version>1.12.261</version>
       </dependency>
       <dependency>
+         <groupId>org.apache.sshd</groupId>
+         <artifactId>sshd-sftp</artifactId>
+         <version>2.14.0</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.sshd</groupId>
+         <artifactId>sshd-sftp</artifactId>
+         <version>2.14.0</version>
+      </dependency>
+
+      <dependency>
          <groupId>cloud.localstack</groupId>
          <artifactId>localstack-utils</artifactId>
          <version>0.2.20</version>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.testcontainers</groupId>
+         <artifactId>testcontainers</artifactId>
+         <version>1.15.3</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>net.java.dev.jna</groupId>
+         <artifactId>jna</artifactId>
+         <version>5.7.0</version>
          <scope>test</scope>
       </dependency>
 
