--- a/qqq-middleware-api/pom.xml
+++ b/qqq-middleware-api/pom.xml
@@ -54,6 +54,28 @@
          <version>${revision}</version>
       </dependency>
 
+      <!-- qqq modules for tests only -->
+      <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-middleware-javalin</artifactId>
+         <version>${revision}</version>
+         <classifier>tests</classifier>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-backend-module-rdbms</artifactId>
+         <version>${revision}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <version>2.2.220</version>
+         <scope>test</scope>
+      </dependency>
+
       <!-- 3rd party deps specifically for this module -->
       <dependency>
          <groupId>com.konghq</groupId>
