Added support for loading static files from the filesystem as as from jars (based on a system property)

--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -124,6 +124,18 @@
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.5.3</version>
+            <configuration>
+               <additionalClasspathElements>
+                  <additionalClasspathElement>
+                     ${project.basedir}/src/test/resources/static-site.jar
+                  </additionalClasspathElement>
+               </additionalClasspathElements>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.10.1</version>
             <configuration>
