Test commit - sync between machines

--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -36,7 +36,7 @@
 
       <!-- When updating to javalin 6.3.0, we received classNotFound errors - which this fixed. -->
       <kotlin.version>1.9.10</kotlin.version>
-      <javalin.version>6.3.0</javalin.version>
+      <javalin.version>6.6.0</javalin.version>
    </properties>
 
    <dependencies>
@@ -116,6 +116,12 @@
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
          <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-middleware-api</artifactId>
+         <version>0.26.0-integration-20250615-161253</version>
+         <scope>compile</scope>
       </dependency>
    </dependencies>
 
