--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -121,6 +121,11 @@
          <artifactId>poi-ooxml</artifactId>
          <version>5.2.5</version>
       </dependency>
+      <dependency>
+         <groupId>org.commonmark</groupId>
+         <artifactId>commonmark</artifactId>
+         <version>0.25.0</version>
+      </dependency>
 
       <!-- adding to help FastExcel -->
       <dependency>
