Rewrite deploy workflow to also be split up

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,12 +129,9 @@ jobs:
     steps:
       - check_middleware_api_versions
 
-  mvn_deploy:
+  deploy:
     executor: localstack/default
     steps:
-      - mvn_build
-      - mvn_verify
-      - check_middleware_api_versions
       - mvn_jar_deploy
 
   publish_asciidoc:
@@ -174,8 +171,36 @@ workflows:
 
   deploy:
     jobs:
-      - mvn_deploy:
+      - build:
           context: [ qqq-maven-registry-credentials, build-qqq-sample-app ]
+          filters:
+            branches:
+              only: /(dev|integration.*)/
+            tags:
+              only: /(version|snapshot)-.*/
+      - test:
+          context: [ qqq-maven-registry-credentials, build-qqq-sample-app ]
+          requires:
+            - build
+          filters:
+            branches:
+              only: /(dev|integration.*)/
+            tags:
+              only: /(version|snapshot)-.*/
+      - api_version_check:
+          context: [ qqq-maven-registry-credentials, build-qqq-sample-app ]
+          requires:
+            - build
+          filters:
+            branches:
+              only: /(dev|integration.*)/
+            tags:
+              only: /(version|snapshot)-.*/
+      - deploy:
+          context: [ qqq-maven-registry-credentials, build-qqq-sample-app ]
+          requires:
+            - test
+            - api_version_check
           filters:
             branches:
               only: /(dev|integration.*)/
