--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -68,7 +68,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-frontend-material-dashboard</artifactId>
-         <version>0.24.0</version>
+         <version>0.26.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
