--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
    </modules>
 
    <properties>
-      <revision>0.26.0-rc.0</revision>
+      <revision>0.26.0-SNAPSHOT</revision>
 
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
