feat: complete Maven Central publishing setup
- Add release profile with GPG signing, source, and javadoc JARs
- Add required Maven Central metadata (name, description, license, developers, SCM)
- Update mvn-settings.xml with Central Portal credentials
- Integrate Central Publishing Plugin 0.8.0 from ci/central-integration branch
- Remove GitHub Packages repository configuration
- Exclude qqq-sample-project from build (circular dependency with frontend artifacts)
- Fix whitespace in Jacoco script

Supports publishing SNAPSHOTs, release candidates, and stable releases to Maven Central

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
       <module>qqq-middleware-slack</module>
       <module>qqq-middleware-api</module>
       <module>qqq-utility-lambdas</module>
-      <module>qqq-sample-project</module>
+      <!-- qqq-sample-project excluded: depends on qqq-frontend-material-dashboard not available in Maven Central -->
    </modules>
 
    <properties>
