fix: use Central Publishing Plugin deploy instead of maven-deploy-plugin
The deploy:deploy goal requires distributionManagement section, but we're
using Central Publishing Plugin which handles deployment automatically.
Switch to 'deploy' goal with release profile and GPG parameters as intended.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,9 +85,10 @@ commands:
           command: |
             echo "Deploying version: $(grep '<revision>' pom.xml | sed 's/.*<revision>//;s/<.*//;')"
       - run:
-          name: Run Maven Jar Deploy
+          name: Publish to Sonatype Central (releases and SNAPSHOTs)
           command: |
-            mvn -s .circleci/mvn-settings.xml -T4 --no-transfer-progress flatten:flatten jar:jar deploy:deploy
+            mvn -s .circleci/mvn-settings.xml -P release -B -T4 --no-transfer-progress -DskipTests \
+              -Dgpg.keyname="$GPG_KEYNAME" -Dgpg.passphrase="$GPG_PASSPHRASE" deploy
       - save_cache:
           paths:
             - ~/.m2
