perf: optimize Maven deploy to skip tests and checkstyle
Since mvn_verify already runs all tests, the deploy step should:
- Skip tests completely (-DskipTests -Dmaven.test.skip=true)
- Skip checkstyle (-Dcheckstyle.skip=true)
- Only run package and deploy phases
- Saves significant time by not re-running tests/validation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,10 +109,12 @@ commands:
             gpg --batch --yes --import /tmp/priv.asc
             gpg --list-secret-keys --keyid-format=long || true
       - run:
-          name: Publish to Sonatype Central (releases and SNAPSHOTs)
+          name: Package and Publish to Sonatype Central (skip tests - already ran)
           command: |
-            mvn -s .circleci/mvn-settings.xml -P release -B -T4 --no-transfer-progress -DskipTests \
-              -Dgpg.keyname="$GPG_KEYNAME" -Dgpg.passphrase="$GPG_PASSPHRASE" deploy
+            mvn -s .circleci/mvn-settings.xml -P release -B -T4 --no-transfer-progress \
+              -DskipTests -Dmaven.test.skip=true -Dcheckstyle.skip=true \
+              -Dgpg.keyname="$GPG_KEYNAME" -Dgpg.passphrase="$GPG_PASSPHRASE" \
+              package deploy
       - save_cache:
           paths:
             - ~/.m2
