--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,7 @@ echo
            <configuration>
               <publishingServerId>central</publishingServerId>
               <autoPublish>true</autoPublish>
+              <waitUntil>validated</waitUntil>
            </configuration>
         </plugin>
       </plugins>
