--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@ commands:
               -DskipTests -Dmaven.test.skip=true -Dcheckstyle.skip=true \
               -Dmaven.javadoc.failOnError=false -Dmaven.javadoc.failOnWarnings=false \
               -Dgpg.keyname="$GPG_KEYNAME" -Dgpg.passphrase="$GPG_PASSPHRASE" \
-              deploy central-publishing:publish
+              deploy
             echo "=== Maven Central deployment completed ==="
       - save_cache:
           paths:
