fix: move Central Publishing Plugin to release profile only
PROBLEM: Central Publishing Plugin with extensions=true was auto-injecting
into all builds, causing SNAPSHOTs to be staged locally instead of deployed.

SOLUTION:
- Remove Central Publishing Plugin from main <build><plugins> section
- Move it exclusively to the "release" profile
- SNAPSHOTs now use only maven-deploy-plugin → Central Portal snapshots
- Releases use Central Publishing Plugin → Maven Central (validated)

VERIFIED LOCALLY:
- Without -P release: No Central Publishing features
- With -P release: "Installing Central Publishing features"
- Clean compilation and packaging works

This should fix SNAPSHOT publishing to Central Portal.

--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,6 @@
       <coverage.classCoveredRatioMinimum>0.95</coverage.classCoveredRatioMinimum>
       <plugin.shade.phase>none</plugin.shade.phase>
       <testOutputToFile>true</testOutputToFile>
-      
-      <!-- Central Publishing Plugin control: skip for SNAPSHOTs, enable for releases -->
-      <skipCentralPublishing>true</skipCentralPublishing>
    </properties>
 
    <profiles>
@@ -106,10 +103,7 @@
       <profile>
          <!-- Release profile for Maven Central publishing -->
          <id>release</id>
-         <properties>
-            <!-- Enable Central Publishing Plugin for releases -->
-            <skipCentralPublishing>false</skipCentralPublishing>
-         </properties>
+
          <build>
             <plugins>
                <!-- GPG Signing for Maven Central -->
@@ -126,6 +120,19 @@
                         </goals>
                      </execution>
                   </executions>
+               </plugin>
+               
+               <!-- Central Publishing Plugin for releases only -->
+               <plugin>
+                  <groupId>org.sonatype.central</groupId>
+                  <artifactId>central-publishing-maven-plugin</artifactId>
+                  <version>0.8.0</version>
+                  <extensions>true</extensions>
+                  <configuration>
+                     <publishingServerId>central</publishingServerId>
+                     <autoPublish>true</autoPublish>
+                     <waitUntil>validated</waitUntil>
+                  </configuration>
                </plugin>
             </plugins>
          </build>
@@ -393,21 +400,6 @@ echo
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>3.0.0</version>
-        </plugin>
-        
-        <!-- Sonatype Central publishing plugin for releases only -->
-        <plugin>
-           <groupId>org.sonatype.central</groupId>
-           <artifactId>central-publishing-maven-plugin</artifactId>
-           <version>0.8.0</version>
-           <extensions>true</extensions>
-           <configuration>
-              <publishingServerId>central</publishingServerId>
-              <autoPublish>true</autoPublish>
-              <waitUntil>validated</waitUntil>
-              <!-- Skip for SNAPSHOT versions - use standard maven-deploy-plugin instead -->
-              <skipPublishing>${skipCentralPublishing}</skipPublishing>
-           </configuration>
         </plugin>
       </plugins>
    </build>
